[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["debian*", "binaries*", "build*", "dist*"]

[project]
name = "binarycookiereader"
version = "2.0.0"
dependencies = [
    "prettytable"
]
requires-python = ">=3.6"
authors = [
  {name = "Corey Forman (digitalsleuth)", email = "github@digitalsleuth.ca"}
]
maintainers = [
  {name = "Corey Forman (digitalsleuth)", email = "github@digitalsleuth.ca"}
]
description = "Python 3 binarycookies parser"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["digital forensics", "dfir", "binarycookies", "cookie", "decode"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/digitalsleuth/binarycookiereader"

[project.scripts]
binarycookiereader = "binarycookiereader.binarycookiereader:main"
